--- a/src/main/resources/PathfindPage.fxml
+++ b/src/main/resources/PathfindPage.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import java.lang.Double?>
+<?import javafx.geometry.Insets?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.effect.Light.Distant?>
-<?import javafx.scene.effect.Lighting?>
-<?import javafx.scene.effect.Shadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,7 +13,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.shape.Polyline?>
 
 <BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.PathfindController">
    <top>
@@ -47,55 +43,6 @@
                         <ImageView fx:id="map_img" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/2dMaps/02_thesecondfloor.png" />
-                           </image>
-                        </ImageView>
-                         <Polyline fx:id="path_polyline" fill="#ff000000" stroke="RED" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="8.0">
-                             <points>
-                                 <Double fx:value="-50.0" />
-                                 <Double fx:value="-40.0" />
-                                 <Double fx:value="50.0" />
-                                 <Double fx:value="-40.0" />
-                                 <Double fx:value="0.0" />
-                                 <Double fx:value="60.0" />
-                                 <Double fx:value="-50.0" />
-                                 <Double fx:value="-40.0" />
-                             </points>
-                             <effect>
-                                 <Lighting diffuseConstant="1.42" specularConstant="0.95" specularExponent="10.22" surfaceScale="2.9">
-                                     <bumpInput>
-                                         <Shadow height="11.12" radius="8.215" width="23.74" />
-                                     </bumpInput>
-                                     <light>
-                                         <Light.Distant />
-                                     </light>
-                                 </Lighting>
-                             </effect>
-                         </Polyline>
-                         <Polyline fx:id="path_polyline_2" fill="#ff000000" stroke="RED" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeWidth="8.0">
-                         <points>
-                             <Double fx:value="-50.0" />
-                             <Double fx:value="-40.0" />
-                             <Double fx:value="50.0" />
-                             <Double fx:value="-40.0" />
-                             <Double fx:value="0.0" />
-                             <Double fx:value="60.0" />
-                             <Double fx:value="-50.0" />
-                             <Double fx:value="-40.0" />
-                         </points>
-                         <effect>
-                             <Lighting diffuseConstant="1.42" specularConstant="0.95" specularExponent="10.22" surfaceScale="2.9">
-                                 <bumpInput>
-                                     <Shadow height="11.12" radius="8.215" width="23.74" />
-                                 </bumpInput>
-                                 <light>
-                                     <Light.Distant />
-                                 </light>
-                             </Lighting>
-                         </effect>
-                     </Polyline>
-                        <ImageView fx:id="destination_img" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/mapIcons/destinationIcon.png" />
                            </image>
                         </ImageView>
                      </children>
