--- a/src/main/resources/Log.fxml
+++ b/src/main/resources/Log.fxml
@@ -1,47 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
-
-
-<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.LogController">
-   <top>
-      <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
-         <left>
-            <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
-               <BorderPane.margin>
-                  <Insets left="10.0" />
-               </BorderPane.margin>
-            </Label>
-         </left>
-         <right>
-            <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 18;" text="(Admin Name)" />
-                  <JFXButton fx:id="back_btn" buttonType="RAISED" onAction="#onBackClick" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%back" />
-               </children>
-               <padding>
-                  <Insets right="10.0" />
-               </padding>
-            </HBox>
-         </right>
-      </BorderPane>
-   </top>
-   <center>
-      <TableView fx:id="log_table" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn prefWidth="138.0" text="C1" />
-          <TableColumn prefWidth="141.0" text="C2" />
-        </columns>
-         <BorderPane.margin>
-            <Insets />
-         </BorderPane.margin>
-      </TableView>
-   </center>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0"
+            xmlns="http://javafx.com/javafx/8.0.141" fx:controller="edu.wpi.cs3733d18.teamS.controller.LogController">
+    <top>
+        <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;"
+                    BorderPane.alignment="CENTER">
+            <left>
+                <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30"
+                       BorderPane.alignment="CENTER">
+                    <BorderPane.margin>
+                        <Insets left="10.0"/>
+                    </BorderPane.margin>
+                </Label>
+            </left>
+            <right>
+                <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+                    <children>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 18;"
+                              text="(Admin Name)"/>
+                        <JFXButton fx:id="back_btn" buttonType="RAISED" onAction="#onBackClick"
+                                   style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%back"/>
+                    </children>
+                    <padding>
+                        <Insets right="10.0"/>
+                    </padding>
+                </HBox>
+            </right>
+        </BorderPane>
+    </top>
+    <center>
+        <TableView fx:id="log_table" BorderPane.alignment="CENTER">
+            <columns>
+                <TableColumn prefWidth="138.0" text="C1"/>
+                <TableColumn prefWidth="141.0" text="C2"/>
+            </columns>
+            <BorderPane.margin>
+                <Insets/>
+            </BorderPane.margin>
+        </TableView>
+    </center>
 </BorderPane>
