--- a/src/main/resources/AdminPage.fxml
+++ b/src/main/resources/AdminPage.fxml
@@ -1,72 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0"
-            xmlns="http://javafx.com/javafx/8.0.141"
-            fx:controller="edu.wpi.cs3733d18.teamS.controller.AdminPageController">
-    <top>
-        <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;"
-                    BorderPane.alignment="CENTER">
-            <left>
-                <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30"
-                       BorderPane.alignment="CENTER">
-                    <BorderPane.margin>
-                        <Insets left="10.0"/>
-                    </BorderPane.margin>
-                </Label>
-            </left>
-            <right>
-                <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <Text fx:id="user_name" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
-                              style="-fx-font-size: 18;" text=""/>
-                        <JFXButton fx:id="logout_btn" buttonType="RAISED" onAction="#onLogoutClick"
-                                   style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%logout"/>
-                    </children>
-                    <padding>
-                        <Insets right="10.0"/>
-                    </padding>
-                </HBox>
-            </right>
-        </BorderPane>
-    </top>
-    <center>
-        <StackPane prefHeight="606.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
-            <children>
-                <ImageView fitHeight="692.0" fitWidth="593.0" opacity="0.05" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png"/>
-                    </image>
-                </ImageView>
-                <fx:include fx:id="serviceArea" layoutX="14.0" layoutY="94.0" prefHeight="400.0" prefWidth="1174.0"
-                            source="ServiceAreaRequests.fxml"/>
-                <VBox alignment="TOP_CENTER" spacing="40.0">
-                    <children>
-                        <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="50.0">
-                            <children>
-                                <JFXButton buttonType="RAISED" onAction="#openLog"
-                                           style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%view_log"/>
-                                <JFXButton fx:id="modify_map_btn" buttonType="RAISED" onAction="#onModifyMapClick"
-                                           style="-fx-font-size: 23; -fx-background-color: #B7B8B6;"
-                                           text="%modify_map"/>
-                                <JFXButton fx:id="reports_button" buttonType="RAISED" onAction="#loadReportScreen"
-                                           style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Reports"/>
-                            </children>
-                        </HBox>
-                        <JFXComboBox fx:id="path_algorithm_box" onAction="#chooseAlgorithm"
-                                     promptText="%choose_path_algorithm" style="-fx-font-size: 18;"/>
-                    </children>
-                    <StackPane.margin>
-                        <Insets top="500.0"/>
-                    </StackPane.margin>
-                </VBox>
-            </children>
-        </StackPane>
-    </center>
+
+<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.AdminPageController">
+   <top>
+      <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
+         <left>
+            <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets left="10.0" />
+               </BorderPane.margin>
+            </Label>
+         </left>
+         <right>
+            <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 18;" text="(Admin Name)" />
+                  <JFXButton fx:id="logout_btn" buttonType="RAISED" onAction="#onLogoutClick" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%logout" />
+               </children>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </HBox>
+         </right>
+      </BorderPane>
+   </top>
+   <center>
+      <StackPane fx:id="stack_pane" prefHeight="606.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="692.0" fitWidth="593.0" opacity="0.05" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/Brigham_and_Womens_Hospital_logo.svg.png" />
+               </image>
+            </ImageView>
+            <fx:include fx:id="serviceArea" layoutX="14.0" layoutY="94.0" prefHeight="400.0" prefWidth="1174.0" source="ServiceAreaRequests.fxml" />
+            <VBox alignment="TOP_CENTER" spacing="40.0">
+               <StackPane.margin>
+                  <Insets top="500.0" />
+               </StackPane.margin>
+            </VBox>
+         </children>
+      </StackPane>
+   </center>
+   <left>
+      <fx:include fx:id="requestSidebar" source="RequestSidebar.fxml" />
+   </left>
 </BorderPane>
