--- a/src/main/resources/Report.fxml
+++ b/src/main/resources/Report.fxml
@@ -1,39 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.geometry.Insets?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXListView?>
+<?import com.jfoenix.controls.JFXTimePicker?>
+<?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0"
-            xmlns="http://javafx.com/javafx/8.0.141"
-            fx:controller="edu.wpi.cs3733d18.teamS.controller.ReportsController">
-    <top>
-        <BorderPane prefHeight="50.0" prefWidth="200.0" style="-fx-background-color: #4863A0;"
-                    BorderPane.alignment="CENTER">
-            <left>
-                <Label fx:id="time" style="-fx-text-fill: #ffffff; -fx-font-size: 23;" text="2:30"
-                       BorderPane.alignment="CENTER">
-                    <BorderPane.margin>
-                        <Insets left="10.0"/>
-                    </BorderPane.margin>
-                </Label>
-            </left>
-            <right>
-                <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-                    <children>
-                        <Text fx:id="user_name" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0"
-                              style="-fx-font-size: 18;" text=""/>
-                        <JFXButton fx:id="logout_btn" buttonType="RAISED" onAction="#onLogoutClick"
-                                   style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%logout"/>
-                    </children>
-                    <padding>
-                        <Insets right="10.0"/>
-                    </padding>
-                </HBox>
-            </right>
-        </BorderPane>
-    </top>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane fx:id="main_pane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.cs3733d18.teamS.controller.ReportsController">
     <right>
         <VBox BorderPane.alignment="CENTER">
             <children>
